microburst-detection/deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microburst-detection
  labels:
    app: microburst-detection
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: microburst-detection
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
